--- a/hangman/templates/home.html
+++ b/hangman/templates/home.html
@@ -70,7 +70,7 @@
 
 						if(gover == 1){
 							$("#won").remove();
-							$("#user_type").prop('disable', true);
+							$("#user_type").prop('disabled', true);
 							$("#form_div").animate({opacity: 0}, 1000, 'linear');
 							setTimeout(function(){
 								$('#form_div').remove();
@@ -79,7 +79,7 @@
 							}, 1000);
 						} else if(gover == 0){
 							$("#lost").remove();
-							$("#user_type").prop('disable', true);
+							$("#user_type").prop('disabled', true);
 							$("#form_div").animate({opacity: 0}, 1000, 'linear');
 							setTimeout(function(){
 								$('#form_div').remove();
