--- a/hangman/templates/home.html
+++ b/hangman/templates/home.html
@@ -112,8 +112,12 @@
 
 {% block content %}
 
-<div id="hgpic" class="inner_div">
+<div id="hgpic" class="inner_div" style="padding:0px;">
 {% for i in pics %}<pre>{{ i }}</pre>{% endfor %}
+</div>
+
+<div id="wrongLetters_div" class="inner_div wrongLetters dim-in">
+
 </div>
 
 <br/>
@@ -126,9 +130,7 @@
 
 <br/>
 
-<div id="wrongLetters_div" class="inner_div wrongLetters dim-in">
 
-</div>
 
 <br/>
 
