--- a/hangman/templates/base.html
+++ b/hangman/templates/base.html
@@ -5,6 +5,7 @@
 
   <style>
   .footer{
+    opacity: 0.5;
     position: fixed;
     left: 0;
     bottom: 0;
@@ -62,7 +63,7 @@
 
       {% if messages %}
         {% for message in messages %}
-        <div class="alert alert-dark alert-dismissable" role="alert">
+        <div id="log-alert" class="alert alert-dark alert-dismissable" role="alert">
           <button class="close" data-dismiss="alert">
             <small><sup>x</sup></small>
           </button>
@@ -91,7 +92,21 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>
+
+  $(function(){
+    if("{{ messages }}"){
+      window.setTimeout(function(){
+        $("#log-alert").fadeTo(500, 0).slideUp(500, function(){
+          $(this).remove();
+        });
+      }, 3000);
+    };
+  });
+
+  </script>
   {% block javascript %}{% endblock %}
+
 </body>
 
 </html>
