--- a/static/styles.css
+++ b/static/styles.css
@@ -6,6 +6,8 @@ pre{
 
 label {
   font-family: Courier;
+  width: 100%;
+  height: 100%;
 }
 
 input {
@@ -24,30 +26,10 @@ body {
   color: white;
 }
 
-.form-control{
-  display: inline-block;
-  background: black;
+.butt{
+  background-color: black;
   color: white;
-  width: 400px;
-}
-
-.form-control:focus{
-  background: black;
-  color: white;
-}
-
-.btn-primary{
-  background: black;
-  border: 1px solid #ced4da;
-}
-
-.btn-primary:hover{
-  background: black;
-}
-
-.alert-dark{
-  background: black;
-  color: white;
+  border: 1px solid grey;
 }
 
 .navbar-brand {
@@ -87,13 +69,9 @@ body {
 }
 
 .wrongLetters{
-  float: left;
-  padding: 0px;
-}
-
-.top-players{
-  text-align: left;
-  float: right;
+  position: absolute;
+  top: 13%;
+  left: 36%;
 }
 
 @keyframes dimIn{
@@ -112,20 +90,4 @@ body {
 
 .guess{
   padding: 10px;
-}
-
-.col{
-  float: left;
-}
-
-.lef{
-  width: 30%;
-}
-
-.rig{
-  width: 30%;
-}
-
-.cen{
-  width: 40%;
 }
